syntax = "proto3";

package greeter;
option go_package = "/greeter";

import "google/protobuf/wrappers.proto";

message MessageRequest {
  string message = 1;
  int64 timestamp = 2;
  SayhelloBody body = 3;
}

message SayhelloBody {
  google.protobuf.StringValue msg = 1;
}

message StringMessage {
  string value = 1;
}

// The response message containing the greetings
message MessageReply {
  string message = 1;
  int64 timestamp = 2;
}